--- a/articles/d98a8d87bb4b46.md
+++ b/articles/d98a8d87bb4b46.md
@@ -3,7 +3,7 @@ title: "【Git】merge済branchをコマンドで一括削除する"
 emoji: "🧹"
 type: "tech"
 topics: [Git]
-published: false
+published: true
 ---
 ### 本記事の内容
 ローカルリポジトリ のmerge済のbranchをコマンドで一括削除する方法について
